# encsync

./: Cargo.toml  README.md
src/: args.rs  config.rs  cryptography.rs  lib.rs  main.rs  output.rs
tests/: cli.rs
