[package]
name = "encsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.3"
log = "0.4.17"
env_logger = "0.10.0"
clap-verbosity-flag = "2.0.1"
chacha20poly1305 = {version = "0.10.1" , features = ["stream"]}
rand = "0.8.5"


[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"
tempfile = "3.5.0"

[build-dependencies]
clap = "4.0"
clap-verbosity-flag = "2.0.1"
clap_mangen = "0.2.11"
